staging/grafana-resource/template/hpa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-otel-lgtm-ingress
  namespace: bao-${DEPLOY_ENV}-env
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "${DOMAIN_NAME}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-otel-lgtm-service
                port:
                  number: 80
